# feature_generator

./: Cargo.toml  README.md
1344656929/1344656929/app/: build.gradle.kts
917463128/: settings.gradle.kts
src/: FeatureComponent.handlebars  args_parser.rs  generation.rs  helpers.rs  lib.rs  main.rs
src/generation/: gen_context.rs  render.rs
src/templates/api/: ApiBuild.handlebars  ApiFeatureProvider.handlebars  FeatureEntry.handlebars
src/templates/etc/: dependency-module-extension.handlebars  settings.gradle.kts.handlebars
src/templates/impl/: ImplBuild.handlebars
src/templates/impl/di/: FeatureComponent.handlebars  FeatureEntryModule.handlebars  FeatureRootComponent.handlebars  RootModule.handlebars  SubcomponentsModule.handlebars
src/templates/impl/directions/: FeatureDirections.handlebars  SubfeatureDirectionTemplate.handlebars
src/templates/mock/: MockAppBuildGradle.handlebars  MockBuildSrcModules.kt.handlebars  MockNavigationEntryModule.kt.handlebars
tests/: integration_test.rs
tests/exp/: app-build-gradle.kts  app-modules.kts  feature_generator_config.toml  lib-app-build-gradle.kts  lib-app-modules.kts  lib.settings.gradle.kts  settings.gradle.kts
tests/exp/app/: Application.kt  LibApplication.kt
tests/exp/feature_api/: HomeFeatureEntry.kt  build.gradle.kts
tests/exp/feature_impl/: FeatureRoot.kt  Screen.kt  ScreenViewModel.kt  Subfeature.kt  build.gradle.kts
tests/exp/lib/: GetExample.kt  GetExampleUseCase.kt  LibDecl.kt  Provider.kt  api_build.gradle.kts  impl_build.gradle.kts
tests/mock/: Application.kt
(+35 files in other folders)
