[package]
name = "feature_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
convert_case = "0.6.0"
serde = "1.0.160"
clap = { version = "4.2.5", features = ["derive"] }
clap_complete = "4.5.1"
home = "0.5.5"
config = "0.13.1"
either = "1.10.0"
rand = "0.8.5"
serial_test = "3.0.0"
